tests/invalid/if_condition_float_from_str/main.py
def main() -> None:
    if float("123"):
        x: int = 1
